Add necessary jdk exports for errorprone
After upgrading source/target to JDK 11, we need to export
more JDK modules for errorprone.

Signed-off-by: utzcoz <utzcoz@outlook.com>