@@ -5,6 +5,27 @@ plugins {
   alias(libs.plugins.robolectric.java.module)
 }
 
+// The `errorprone` library now needs some additional exports to allow it to
+// perform reflections. The flags passed to the JVM are from the errorprone
+// documentation: https://errorprone.info/docs/installation.
+tasks.compileJava.configure {
+  options.compilerArgs.addAll(
+    listOf(
+      "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+      "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+      "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+      "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+      "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+      "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+      "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+      "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+      "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+      "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+      "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+    )
+  )
+}
+
 // Disable annotation processor for tests
 tasks.compileTestJava.configure { options.compilerArgs.add("-proc:none") }
 
